# Cache-Simulater

./: README  README.md  Simulater  Simulater.cpp  config.txt  helper.h  input.output  input.s  makefile  p1.s  p2.s  p3.s  riscv_asm  riscv_sim  test.output  test.s  test2.s
Assembler/: CMakeLists.txt  output.hex  readme.md
Assembler/include/: b_type.hh  base.hh  i_type.hh  j_type.hh  r_type.hh  s_type.hh  u_type.hh
Assembler/src/: b_type.cpp  compare_files.cpp  i_type.cpp  j_type.cpp  main.cpp  r_type.cpp  s_type.cpp  u_type.cpp
